@@ -31,15 +31,6 @@ name|java
 operator|.
 name|util
 operator|.
-name|ArrayList
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
 name|Collection
 import|;
 end_import
@@ -68,6 +59,15 @@ operator|.
 name|util
 operator|.
 name|Iterator
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|LinkedHashSet
 import|;
 end_import
 begin_import
@@ -330,14 +330,14 @@ name|fieldMatch
 operator|=
 name|fieldMatch
 expr_stmt|;
-name|List
+name|Set
 argument_list|<
 name|Query
 argument_list|>
 name|flatQueries
 init|=
 operator|new
-name|ArrayList
+name|LinkedHashSet
 argument_list|<
 name|Query
 argument_list|>
@@ -761,14 +761,14 @@ argument_list|>
 name|flatQueries
 parameter_list|)
 block|{
-name|List
+name|Set
 argument_list|<
 name|Query
 argument_list|>
 name|expandQueries
 init|=
 operator|new
-name|ArrayList
+name|LinkedHashSet
 argument_list|<
 name|Query
 argument_list|>
